# synergy-through-usb

./: .gitignore  CMakeLists.txt  README  README.md
docs/usb/: README.md  api.md
src/: CMakeLists.txt
src/cmd/synergyc/: CMakeLists.txt
src/cmd/synergyd/: CMakeLists.txt
src/cmd/synergyp/: CMakeLists.txt
src/cmd/synergys/: CMakeLists.txt
src/cmd/syntool/: CMakeLists.txt
src/gui/: CMakeLists.txt
src/gui/res/: MainWindowBase.ui  SettingsDialogBase.ui
src/gui/res/lang/: gui_cy.ts
src/gui/src/: AppConfig.cpp  AppConfig.h  IpcClient.cpp  MainWindow.cpp  MainWindow.h  SettingsDialog.cpp  main.cpp
src/lib/arch/: Arch.cpp  Arch.h  CArch.cpp  CArch.h  CArchMiscWindows.cpp  CArchMultithreadPosix.h  CArchSystemWindows.cpp  CArchUsbDataLink.cpp  CArchUsbDataLink.h  CMakeLists.txt  CMultibyte.h  IArchString.cpp  IArchUsbDataLink.h  XArch.h  multibyte.h
src/lib/arch/unix/: ArchMultithreadPosix.h
src/lib/arch/win32/: ArchMiscWindows.cpp  ArchSystemWindows.cpp
src/lib/base/: CMakeLists.txt
src/lib/client/: CClient.cpp  CClient.h  CMakeLists.txt  Client.cpp  Client.h
src/lib/common/: BasicTypes.h  CMakeLists.txt  basic_types.h  common.h
src/lib/io/: CMakeLists.txt  CStreamBuffer.cpp  StreamBuffer.cpp
src/lib/ipc/: CIpcClient.cpp  CIpcServer.cpp  CIpcServer.h  CMakeLists.txt  IpcServer.cpp
src/lib/mt/: CMakeLists.txt
src/lib/net/: BaseAddress.cpp  BaseAddress.h  CBaseAddress.cpp  CBaseAddress.h  CMakeLists.txt  CNetworkAddress.cpp  CNetworkAddress.h  CTCPListenSocket.cpp  CTCPListenSocket.h  CTCPSocket.cpp  CTCPSocket.h  CTCPSocketFactory.cpp  CTCPSocketFactory.h  CUSBAddress.cpp  CUSBAddress.h  CUSBDataLink.cpp  CUSBDataLink.h  CUSBDataLinkFactory.cpp  CUSBDataLinkFactory.h  CUSBDataLinkListener.cpp  CUSBDataLinkListener.h  IDataSocket.h  IDataTransfer.cpp  IDataTransfer.h  IListenSocket.h  ISocket.h  ISocketFactory.cpp  ISocketFactory.h  ITransportFactory.cpp  ITransportFactory.h  NetworkAddress.cpp  NetworkAddress.h  TCPListenSocket.cpp  TCPListenSocket.h  TCPSocket.cpp  TCPSocket.h  TCPSocketFactory.cpp  TCPSocketFactory.h
src/lib/platform/: CMSWindowsClipboardBitmapConverter.cpp  CMSWindowsHookLibraryLoader.cpp  CMSWindowsKeyState.cpp  CMSWindowsScreen.cpp  CMakeLists.txt  CSynergyHook.cpp  CSynergyHook.h  MSWindowsClipboardBitmapConverter.cpp  MSWindowsHook.cpp  MSWindowsKeyState.cpp  MSWindowsScreen.cpp
src/lib/server/: CClientListener.cpp  CClientListener.h  CConfig.cpp  CConfig.h  CMakeLists.txt  CServer.cpp  CServer.h  ClientListener.cpp  ClientListener.h  Config.cpp  Config.h  Server.cpp  Server.h
src/lib/synergy/: ArgParser.cpp  CApp.cpp  CClientApp.cpp  CClientApp.h  CClientTaskBarReceiver.cpp  CMakeLists.txt  CPacketStreamFilter.cpp  CPacketStreamFilter.h  CServerApp.cpp  CServerApp.h  ClientApp.cpp  ClientApp.h  ClientTaskBarReceiver.cpp  PacketStreamFilter.cpp  PacketStreamFilter.h  ServerApp.cpp  ServerApp.h
src/lib/synwinhk/: CMakeLists.txt  synwinhk.cpp  synwinhk.h
src/plugin/winmmjoy/: CMakeLists.txt
src/test/integtests/: CMakeLists.txt
src/test/unittests/: CMakeLists.txt
tools/: CMakeLists.txt
tools/cryptopp562/: UpgradeLog.XML  cryptest.sln
